--- a/styles/fourth.module.css
+++ b/styles/fourth.module.css
@@ -14,10 +14,10 @@
 
 
 
-.img{
+/* .img{
     width: 8vw;
     height: auto;
-}
+} */
 
 @media (max-width:1100px){
     .img{
