--- a/styles/second.module.css
+++ b/styles/second.module.css
@@ -6,18 +6,20 @@
 }
 
 .imgContainer {
-    width: 70%;
-    transform: translateY(-26vw);
+    width: 50vw;
+    height: 60rem;
+    /* transform: translateY(-26vw); */
     position: absolute;
     float: right;
     right: -10vw;
+    z-index: 0;
 }
 
 .motto,
 .vision {
-    background-color: black;
     margin-top: -2.5vw;
-    z-index: 1;
+    position: relative;
+    z-index: 4;
     text-align: center;
     color: rgba(211, 211, 211, 1);
     font-weight: 700;
@@ -33,7 +35,7 @@
 }
 
 .card {
-    height: 20vw;
+    height: fit-content;
     font-size: 1.1vw;
     color: white;
     border-radius: 3vw;
@@ -53,21 +55,21 @@
 
 .content {
     width: 100%;
-    padding-left: 2vw;
-    padding-right: 2vw;
-    padding-bottom: 3vw;
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
+    padding-bottom: 2.4rem;
     text-align: center;
-
+    height: fit-content;
 }
 
 #parvision{
     padding-bottom: 8vw;
 }
 
-.img {
+/* .img {
     width: 8vw;
     height: auto;
-}
+} */
 
 .partner {
     font-weight: 700;
@@ -108,9 +110,12 @@
 
 .rect2 {
     transform: translateY(3.8vw);
-    right: 65%;
-    width: 40%;
+    /* right: 65%;
+    width: 40%; */
     float: left;
+    height: 50vw;
+    width: 50vw;
+    transform: translateX(-30%);
     position: absolute;
 }
 
@@ -124,6 +129,7 @@
 .whole1 {
     position: relative;
     /* top: 300%; */
+    z-index: 0;
     text-align: left;
 }
 
@@ -195,17 +201,18 @@
 @media (max-width:1200px){
     .imgContainer{
         width: 80%;
-        transform: translateY(-40vw);
+        transform: translateY(0);
     }
 }
 
 @media (max-width:1100px) {
     .imgContainer{
         width: 90%;
-        transform: translateY(-40vw);
+        transform: translateY(0);
     }
     .rect2{
-        transform: translateY(8.5vw);
+        transform: translateY(13vw);
+        transform: translateX(-9vw);
     }
     .img {
         width: 8.2vw;
@@ -238,7 +245,7 @@
     }
 
     .card {
-        height: 25vw;
+        height: fit-content;
         font-size: 1.3vw;
     }
 
@@ -251,11 +258,11 @@
 
     .imgContainer{
         width: 100%;
-        transform: translateY(-49vw);
+        transform: translateY(0);
     }
 
     .card {
-        height: 21vw;
+        height: fit-content;
         font-size: 1.8vw;
     }
 }
@@ -264,12 +271,13 @@
 @media (max-width:800px) {
 
     .imgContainer{
-        width: 120%;
-        transform: translateY(-55vw);
+        width: 100%;
+        height: 60rem;
+        transform: translateY(15%);
     }
 
     .rect2{
-        transform: translateY(25vw);
+        transform: translateY(40vw);
     }
     .img {
         width: 12vw;
@@ -312,7 +320,8 @@
 @media (max-width:500px){
     .imgContainer{
         width: 150%;
-        transform: translateY(-130vw);
+        transform: translateY(20%);
+        transform: translateX(20%);
     }
     .motto{
         margin-bottom: 1vw;
@@ -342,7 +351,7 @@
 @media (max-width:400px){
     .imgContainer{
         width: 150%;
-        transform: translateY(-130vw);
+        /* transform: translateY(-130vw); */
     }
     .cont {
         font-size: 2.7vw;
