--- a/styles/third.module.css
+++ b/styles/third.module.css
@@ -25,11 +25,11 @@
 .box{
     margin-top: 5vw;
     /* border-left: 0.1vw solid white; */
-    padding-left: 2vw;
+    padding-left: 3vw;
 }
 .box2{
     margin-top: 9vw;
-    padding-left: 2vw;
+    padding-left: 3vw;
 }
 .content{
     text-align: center;
